--- a/src/components/PastHour/style/PastHour.css
+++ b/src/components/PastHour/style/PastHour.css
@@ -1,10 +1,16 @@
-.gallery{
-  margin-top: 5rem;
-  margin-left: 10rem;
+.gallery {
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.TitleHour{
+.TitleHour {
   text-align: center;
-  font-size: 50px;
+  font-size: 36px;
   margin-top: 7rem;
+  color: #0F172A;
+  /* Slate 900 */
+  font-weight: 600;
+  letter-spacing: -0.5px;
 }
